--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <!-- ================= BOXICONS ================= --> 
-<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+ <link rel="icon" href="src/assets/glow.png">
+ <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 <!-- ================= UNICONS ================= --> 
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
